@@ -37,12 +37,6 @@
 #include "cairoint.h"
 #include "cairo-xcb.h"
 
-cairo_surface_t *
-cairo_xcb_surface_create (XCBConnection		*dpy,
-			   XCBDRAWABLE		drawable,
-			   XCBVISUALTYPE		*visual,
-			   cairo_format_t	format);
-
 #define AllPlanes               ((unsigned long)~0L)
 
 static XCBRenderPICTFORMAT
